# rubiks-cube-timer

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  biome.json  bun.toml  convert-icons.js  generate-og-image.js  index.html  next.config.ts  package.json  tsconfig.json
cube-wasm/: .gitignore  Cargo.toml  LICENSE  README.md  package.json
cube-wasm/pkg-bundler/: cube_wasm.d.ts  cube_wasm.js  cube_wasm_bg.js  cube_wasm_bg.wasm  cube_wasm_bg.wasm.d.ts
cube-wasm/src/: lib.rs  optimized_cube.rs  scramble_utils.rs  wasm_bindings.rs
public/: browserconfig.xml  manifest.json  robots.txt  sw-register.js
scripts/: build-production.ts  setup-wasm.ts
src/app/: globals.css  layout.tsx  page.tsx  sw.ts
src/app/about/: page.tsx
src/components/: AchievementChecker.tsx  Achievements.tsx  AppLayout.tsx  Charts.tsx  Cube3DViewer.tsx  CubeVisualization.tsx  DailyProgress.tsx  DailyStatistics.tsx  FloatingCubeButton.tsx  PBCelebration.tsx  PWAInstallButton.tsx  ScrambleDialog.tsx  ScrambleDisplay.tsx  ScramblePractice.tsx  ScrambleStepByStep.tsx  ServiceWorkerStatus.tsx  Settings.tsx  Statistics.tsx  ThemeToggle.tsx  Timer.tsx  TimerView.tsx  TimesList.tsx
src/contexts/: SettingsContext.tsx  UserProgressContext.tsx
src/hooks/: usePWA.ts  useTinybaseStore.ts
src/lib/: cube-3d-renderer.ts  cube-simulation.ts  cube-wasm.ts  scramble.ts  storage.ts  test.ts  tinybase-storage.ts  utils.ts
tests/lib/: cube-faces.test.ts  cube-halfturn.test.ts  cube-prime.test.ts  cube-simulation.test.ts  scramble.test.ts
(+12 files in other folders)
